--- a/portfolio.html
+++ b/portfolio.html
@@ -21,38 +21,126 @@
   <body>
     <header class="header">
       <div class="container header-container">
-        <nav class="nav">
-          <a class="header-logo logo link" href="./index.html"
-            >Web<span class="header-web">Studio</span></a
-          >
-          <ul class="header-list list">
-            <li class="header-item">
-              <a class="header-link link" href="./index.html">Studio</a>
+      <nav class="nav">
+        <a class="header-logo logo link" href="./index.html">Web<span class="header-web">Studio</span></a
+        >
+        <ul class="header-list list">
+          <li class="header-item">
+            <a class="header-link link current" href="./index.html">Studio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address class="address">
+        <ul class="address-list list">
+          <li class="address-item">
+            <a class="address-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="address-item">
+            <a class="address-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
+      <button type="button" data-menu-open class="menu-open-btn">
+        <svg class="menu-open-icon" width="32" height="22">
+          <use href="./images/sprite.svg#menu-burger"></use>
+        </svg>
+      </button>
+      </div>
+      <div class="mob-menu is-hidden" data-menu>
+        <div>
+        <button type="button" data-menu-close class="menu-close-btn">
+        <svg class="menu-close-btn-icon" width="8" height="8">
+          <use href="./images/sprite.svg#modal-close"></use>
+        </svg>
+        </button>
+        <ul class="mob-menu-list list">
+          <li class="mob-menu-item">
+            <a class="mob-menu-link link" href="./index.html">Studio</a>
+          </li>
+          <li class="mob-menu-item">
+            <a class="mob-menu-link link current" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="mob-menu-item">
+            <a class="mob-menu-link-sp link" href="">Contacts</a>
+          </li>
+        </ul>
+        </div>
+        <div>
+          <address class="mob-menu-address">
+        <ul class="mob-menu-address-list list">
+          <li class="mob-menu-address-item">
+            <a class="mob-menu-tel-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+          <li class="mob-menu-address-item">
+            <a class="mob-menu-address-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>    
+      </address>
+          <ul class="mob-menu-social-list list">
+            <li class="social-list-item">
+              <a href="" class="mob-menu-social-list-link">
+                <svg
+                  aria-label="instagram"
+                  class="mob-menu-social-list-icon"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="header-item">
-              <a class="header-link link current" href="./portfolio.html"
-                >Portfolio</a
-              >
+            <li class="social-list-item">
+              <a href="" class="mob-menu-social-list-link">
+                <svg
+                  aria-label="twitter"
+                  class="mob-menu-social-list-icon"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/sprite.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="header-item">
-              <a class="header-link link" href="">Contacts</a>
+            <li class="social-list-item">
+              <a href="" class="mob-menu-social-list-link">
+                <svg
+                  aria-label="facebook"
+                  class="mob-menu-social-list-icon"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="mob-menu-social-list-link">
+                <svg
+                  aria-label="linkedin"
+                  class="mob-menu-social-list-icon"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/sprite.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </nav>
-        <address class="address">
-          <ul class="address-list list">
-            <li class="address-item">
-              <a class="address-link link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="address-item">
-              <a class="address-link link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+        </div>
       </div>
     </header>
 
@@ -351,7 +439,82 @@
             </li>
           </ul>
         </div>
+        <form name="footer-form" autocomplete="on">
+          <p class="footer-text-title">Subscribe</p>
+          <div class="footer-form-div">
+            <input
+              type="email"
+              name="email"
+              class="footer-form-input"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="footer-form-btn">
+              Subscribe
+              <svg class="footer-btn-icon" width="24" height="24">
+                <use href="./images/sprite.svg#icon-frame"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+        <svg class="modal-close-btn-icon" width="8" height="8">
+          <use href="./images/sprite.svg#modal-close"></use>
+        </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <label class="modal-form-field"> 
+            <span  class="modal-label-text">Name</span>
+            <span class="modal-input-wrapper">
+            <input class="modal-input" type="text" name="user_name" placeholder=" " />
+            <svg class="modal-form-input-icon" width="18" height="18">
+              <use href="./images/sprite.svg#icon-person"></use>
+            </svg>
+            </span>
+          </label>
+          <label class="modal-form-field"> 
+            <span  class="modal-label-text">Phone</span>
+            <span class="modal-input-wrapper">
+            <input class="modal-input" type="tel" name="user_phone" placeholder=" " />
+            <svg class="modal-form-input-icon" width="18" height="24">
+              <use href="./images/sprite.svg#icon-phone"></use>
+            </svg>
+            </span>
+          </label>
+          <label class="modal-form-field"> 
+            <span  class="modal-label-text">Email</span>
+            <span class="modal-input-wrapper">
+            <input class="modal-input" type="email" name="user_email" placeholder=" " />
+            <svg class="modal-form-input-icon" width="18" height="24">
+              <use href="./images/sprite.svg#icon-email"></use>
+            </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span  class="modal-label-text">Comment</span>
+            <textarea name="user_message" class="modal-form-message" placeholder="Text input"
+            ></textarea>
+          </label>
+          <label for="user-policy" class="modal-check-desc">
+          <input id="user-policy" type="checkbox" name="user_policy" value="true" class="modal-checkbox visually-hidden">
+            <span class="modal-fake-checkbox">
+            <svg class="modal-checkbox-icon" width="10" height="8">
+              <use href="./images/sprite.svg#modal-auto"></use>
+            </svg>
+            </span>
+            I accept the terms and conditions of the&nbsp;<a class="policy-link" href="">Privacy Policy</a> 
+          </label>
+          <button type="submit" class="modal-form-btn">Send</button>
+        </form>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
