--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <a class="mob-menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="mob-menu-item">
-            <a class="mob-menu-link-sp link" href="">Contacts</a>
+            <a class="mob-menu-link link" href="">Contacts</a>
           </li>
         </ul>
         </div>
